spacing issue index file

--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -19,7 +19,9 @@
 .form_icons_hover:hover {
     transform: translateY(-7px) !important;
 }
-
+.mt_minus_4{
+    margin-top: -4px;
+}
 .input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
